step 1 and 2 page, auth service to signup and confirm with cognito
