# services/auth/src/auth.controller.ts
@@ -1,5 +1,6 @@
 import express from 'express';
-import signup from './signup.service';
+import { signup, confirm } from './signup.service';
+import onboardingRepository from './repository/onboarding';
 
 const authRouter = express.Router();
 export default authRouter;
@@ -8,9 +9,28 @@ authRouter.post('/signup', async (req, res) => {
   const { name, email } = req.body;
 
   try {
-    const response = await signup(name, email);
-    return res.status(201).json({ message: 'User created', userId: response.User?.Username });
+    await signup(name, email);
+    return res.status(201).end();
   } catch (error) {
+    console.error(error);
     return res.status(500).json({ message: 'Failed to create user', error });
+  }
+});
+
+authRouter.post('/confirm', async (req, res) => {
+  const { email, code } = req.body;
+  try {
+    const tokens = await confirm(email, code);
+    await onboardingRepository.deleteTempPassword(email);
+    console.log(tokens);
+    return res.status(200).json({
+      accessToken: tokens.accessToken,
+      refreshToken: tokens.refreshToken,
+      idToken: tokens.idToken,
+      expiresIn: tokens.expiresIn,
+    });
+  } catch (error) {
+    console.error(error);
+    return res.status(500).json({ message: 'Failed to confirm user', error });
   }
 });
